2012-10-07  Giuseppe Scrivano  <gscrivano@gnu.org>

	* wget.h (enum): Add THREADS_ERR and SEM_ERR.
	* recur.c (retrieve_tree): Use `pthread_join' to free a terminated
	thread resources.

2012-09-18  Ilim Ugur  <ilimugur@gmail.com>
	* metalink.c (elect_resources): Rewrite function definition, correcting
	faulty logic in branching statements.
	* metalink.c (elect_checksums): Rewrite function definition, correcting
	faulty logic in branching statements.
	* metalink.c (delete_mlink): Rename variables tempfile, tempres,
	tempcsum, temphash as file_temp, res_temp, csum_temp and phash_temp.
	* retr.c : Take functions elect_resources and elect_checksums out of
	comment brackets.

2012-09-17  Ilim Ugur  <ilimugur@gmail.com>

	* metalink.c : Add comments for functions delete_mlink, elect_checksums,
	elect_resources and parse_metalink.
	* metalink.h : Add prototypes of elect_resources and elect_checksums.
	* multi.c : Remove static variable temp.
	* options.h : Remove ifdefs that contain metalink_file member, due to
	the opt.metalink_file check made in an if statement in main.c.
	* retr.c (retrieve_from_file): Use functions elect_checksums and
	elect_resources to filter the parsed information during metalink
	downloads.

2012-08-22  Ilim Ugur  <ilimugur@gmail.com>

	* main.c : Correct malloc size for temp_option.

2012-08-20  Ilim Ugur  <ilimugur@gmail.com>

	* metalink.c (verify_file_hash): Change type of function parameter
	checksums. Add a variable checksum of type mlink_checksum. Use checksum
	as the loop variable in for loop instead of i. Replace usage of
	checksums[i] with checksum within the scope of the loop.
	* metalink.c : Add functions parse_metalink, elect_resources,
	elect_checksums and delete_mlink.
	* metalink.h : Define new types mlink_piece_hash, mlink_checksum,
	mlink_resource, mlink_chunk_checksum, mlink_file and mlink. Add
	prototypes of parse_metalink and delete_mlink. Update prototype for
	verify_file_hash.